--- a/style/common.css
+++ b/style/common.css
@@ -6,6 +6,14 @@ div {
     font-weight: 500;
 }
 
+a {
+    text-decoration: none;
+}
+
+.PageWrapper {
+    padding: 10px 30px;
+}
+
 .MainWrapper_Vertical {
     display: flex;
     flex-direction: column;
@@ -48,6 +56,10 @@ div {
     gap: 15px;
 }
 
+.ExerciseSection {
+    text-align: center;
+}
+
 .NavMenuWrapper div {
     font-size: 15px;
 }
@@ -56,6 +68,11 @@ div {
 .EmployeeNumber {
     font-size:12px;
     color:#999;
+}
+
+.CurrentPage {
+    text-decoration: none;
+    font-weight: 600;
 }
 
 
